--- a/src/CSS/Movies.module.css
+++ b/src/CSS/Movies.module.css
@@ -15,7 +15,7 @@
     font-size: 1rem;
     border-radius: 5px;
     border: 1px solid #ccc;
-    min-width: 550px;
+    width:50%;
   }
 
 .filterHeader {
