--- a/src/CSS/AppBackground.module.css
+++ b/src/CSS/AppBackground.module.css
@@ -4,26 +4,27 @@
     background-repeat: no-repeat;
     min-height: 100vh;
     width: 100%;
-    padding: 1rem;
+    padding: 0.5rem;
     color: #CCCCCC;
   }
+
   
   h1 {
     color: #FF8C00;
     font-size: 2.5rem;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+    /* text-shadow: 1px 1px 50px rgb(16, 139, 211); */
   }
   
   h2 {
     color: #BF40BF;
     font-size: 2rem;
-    text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.7);
+    text-shadow: 1px 1px 50px rgba(28, 15, 215, 0.8);
   }
   
   h3 {
     color: #00BFFF;
     font-size: 1.6rem;
-    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
+    text-shadow: 1px 1px 50px rgba(170, 71, 158, 0.8);
   }
   
   p {
