--- a/src/CSS/ActorDetails.module.css
+++ b/src/CSS/ActorDetails.module.css
@@ -1,43 +1,49 @@
+.Wrapper {
+  position: relative;
+  padding: 1rem;
+}
 .Container {
   max-width: 800px;
   width: 100%;
   margin: 0rem auto;
   padding: 1rem;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   box-sizing: border-box;
 }
-.header{
-  display: flex;
-  justify-content: flex-start;
-  gap:3rem;
-}
-.backBtn{
-  width:auto;
+
+.backBtn {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  height: 2.2rem;
   background-color: #76787a;
   color: white;
   font-size: 0.9rem;
-  padding: 0.4rem 0.8rem;
+  padding: 0 0.8rem;
   border: none;
   border-radius: 6px;
   cursor: pointer;
   transition: background-color 0.2s ease;
+  white-space: nowrap;
 }
+
 
 .backBtn:hover {
   background-color: #161716;
 }
 
 .Title {
+  width: 100%;
   font-size: 1.5rem;
-  text-align: center;
-  margin: 0.5rem 0;
+  text-align:start;
+  margin: 2rem 0;
   word-wrap: break-word;
 }
 
 .Table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+  color: #ffffff;
 }
 
 .Table th,.Table td {
@@ -46,10 +52,11 @@
   font-size: 0.9rem;
   text-align: left;
   word-break: break-word;
+
 }
 
 .Table th {
-  background-color: #625050fd;
+  background-color: #6a4a4afd;
   font-weight: 600;
 }
 
@@ -98,6 +105,8 @@
 @media (min-width: 768px) {
   .Title {
     font-size: 1.8rem;
+    margin: 1.5rem 0;
+
   }
 
   .ActionBtn {
@@ -126,5 +135,7 @@
 
   .Title {
     font-size: 2rem;
+    margin: 0.5rem 0;
+
   }
 }
