--- a/src/CSS/AppBackground.module.css
+++ b/src/CSS/AppBackground.module.css
@@ -6,6 +6,7 @@
     width: 100%;
     padding: 0.5rem;
     color: #CCCCCC;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   
